--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
     "paths": {
       "@/*": ["src/*"],
       "@components/*": ["src/components/*"],
-      "@assets/*": ["src/assets/*"]
+      "@assets/*": ["src/assets/*"],
+      "@layouts/*": ["src/layouts/*"]
     },
   },
   "include": ["src"],
