--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-redux": "^8.1.0",
+    "react-query": "^3.39.3",
+    "react-redux": "^8.1.1",
     "react-router": "^6.13.0",
     "react-router-dom": "^6.13.0",
     "uuid": "^9.0.0",
