--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,15 +28,27 @@
       "@/*": [
         "src/*"
       ],
-      "@components/*": [
-        "src/components/*"
-      ],
       "@assets/*": [
         "src/assets/*"
       ],
+      "@components/*": [
+        "src/components/*"
+      ],
       "@layouts/*": [
         "src/layouts/*"
-      ]
+      ],
+      "@pages/*": [
+        "src/pages/*"
+      ],
+      "@routes/*": [
+        "src/routes/*"
+      ],
+      "@styles/*": [
+        "src/styles/*"
+      ],
+      "@translations/*": [
+        "src/translations/*"
+      ],
     }
   },
   "include": [
