--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,8 +48,9 @@
       ],
       "@translations/*": [
         "src/translations/*"
-      ],
-    }
+      ]
+    },
+    "allowSyntheticDefaultImports": true
   },
   "include": [
     "src"
