--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "prettier": "^2.8.8",
     "rollup-plugin-visualizer": "^5.9.2",
     "sass": "^1.63.4",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
     "vite-plugin-mkcert": "^1.15.0"
