--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.13.7",
     "@mui/material": "^5.13.5",
+    "@mui/x-date-pickers": "^6.10.0",
     "@phosphor-icons/react": "^2.0.10",
     "@react-oauth/google": "^0.11.0",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "formik": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
