--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.13.7",
     "@mui/material": "^5.13.5",
+    "@mui/x-date-pickers": "^6.10.1",
+    "@phosphor-icons/react": "^2.0.10",
+    "@react-hook/media-query": "^1.1.1",
     "@react-oauth/google": "^0.11.0",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
