--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^8.1.1",
     "react-router": "^6.13.0",
     "react-router-dom": "^6.13.0",
+    "react-router-hash-link": "^2.4.3",
     "uuid": "^9.0.0",
     "yup": "^1.2.0"
   },
