--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^5.13.7",
     "@mui/material": "^5.13.5",
     "@mui/x-date-pickers": "^6.10.1",
+    "@paypal/react-paypal-js": "^8.1.3",
     "@phosphor-icons/react": "^2.0.10",
     "@react-hook/media-query": "^1.1.1",
     "@react-oauth/google": "^0.11.0",
