--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@csstools/normalize.css": "^12.0.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.13.7",
+    "@mui/joy": "^5.0.0-beta.2",
     "@mui/material": "^5.13.5",
     "@mui/x-date-pickers": "^6.10.1",
     "@phosphor-icons/react": "^2.0.10",
