--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "merge-images": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-facebook": "^9.0.12",
     "react-gtm-module": "^2.0.11",
     "react-helmet": "^6.1.0",
     "react-query": "^3.39.3",
