--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "formik": "^2.4.2",
     "framer-motion": "^10.12.18",
     "merge-images": "^2.0.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
