--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "dayjs": "^1.11.9",
     "formik": "^2.4.2",
     "framer-motion": "^10.12.18",
+    "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
     "merge-images": "^2.0.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
