--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "formik": "^2.4.2",
     "framer-motion": "^10.12.18",
     "lodash.debounce": "^4.0.8",
@@ -35,6 +37,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-facebook": "^9.0.12",
     "react-gtm-module": "^2.0.11",
     "react-helmet": "^6.1.0",
