--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
     "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
     "draftjs-to-html": "^0.9.1",
     "formik": "^2.4.2",
     "framer-motion": "^10.12.18",
