--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-facebook": "^9.0.12",
     "react-gtm-module": "^2.0.11",
     "react-helmet": "^6.1.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.1",
     "react-router": "^6.13.0",
