adding prod / dev envs

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host",
+    "dev": "env-cmd -f ./dev.env vite --host",
+    "prod": "env-cmd -f ./prod.env vite --host",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
@@ -30,6 +31,7 @@
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
     "draftjs-to-html": "^0.9.1",
+    "env-cmd": "^10.1.0",
     "formik": "^2.4.2",
     "framer-motion": "^10.12.18",
     "lodash.debounce": "^4.0.8",
