--- a/package.json
+++ b/package.json
@@ -51,9 +51,11 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/draft-js": "^0.11.12",
     "@types/node": "^20.3.1",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
