--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@types/react-draft-wysiwyg": "^1.13.4",
+    "@types/react-lazy-load-image-component": "^1.6.0",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
